// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quotes.scss - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
@use "module";
@forward "module";

=====================================output=====================================
@use 'module';
@forward 'module';

================================================================================
`;

exports[`quotes.scss format 1`] = `
====================================options=====================================
parsers: ["scss"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@use "module";
@forward "module";

=====================================output=====================================
@use "module";
@forward "module";

================================================================================
`;
